fixed the alignment of content for mobile screens, repositioned switchDeviceTypeBtns for mobile screens

--- a/src/styles/animations/animations.sass
+++ b/src/styles/animations/animations.sass
@@ -1,3 +1,7 @@
+.testme123
+  top: calc(-100vh + 3em)
+
+
 .ohHoverAnim
   cursor: pointer
   transform: scale(1.00001)
