--- a/src/styles/mediaQuery.sass
+++ b/src/styles/mediaQuery.sass
@@ -20,3 +20,9 @@
 .scrollOnSmDown
   @media (max-width: 800px)
     overflow-y: scroll
+
+.contacts-text-wrapper
+  padding: 2em
+  @media (min-width: 800px)
+    margin-top: 3em
+    margin-left: 5em
