--- a/src/styles/various.sass
+++ b/src/styles/various.sass
@@ -21,3 +21,10 @@
 .opacityFull
   opacity: 1
   transition: opacity 300ms
+
+.switchDevicesBtnContainer
+  position: absolute
+  top: 40px
+  right: 20px
+  @media (max-width: 800px)
+    right: 0px
